# receipt-reader

./: README.md  readme.md
backend/: .gitignore  Makefile  main.py  pyproject.toml
backend/scripts/: migrate.py
backend/scripts/sql/: 0001_db_up.sql
backend/src/: constants.py  dependencies.py  main.py  types.py
backend/src/application/: main.py  meal.py  receipt.py
backend/src/domain/: meal.py  receipt.py
backend/src/domain/interfaces/: __init__.py  meal_repository.py  receipt_repository.py
backend/src/infra/adapters/: gemini_parser.py
backend/src/infra/ai_repository/: gemini.py  inmemory.py  types.py
backend/src/infra/persistence/receipt/: inmemory.py
backend/src/infra/receipt_repository/: inmemory.py  sqlite.py  types.py
backend/src/presentation/: meal_router.py  receipt_router.py
docs/Receipt Reader/: Create Receipt.yml  Delete Receipt.yml  LIst Receipts.yml  Ping.yml  Update Receipt.yml  Upload Receipt.yml  opencollection.yml
docs/Receipt Reader/Meals/: Upload Meal.yml  folder.yml
docs/Receipt Reader/Receipts/: Create Receipt.yml  Delete Receipt.yml  LIst Receipts.yml  Update Receipt.yml  Upload Receipt.yml  folder.yml
frontend/: .cta.json  README.md  package-lock.json  package.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/layout/home/: add_receipt_modal.tsx  delete_receipt_modal.tsx  receipt_form.tsx  (+2 more)
frontend/src/components/ui/: button.tsx  dialog.tsx  image_input.tsx  link_button.tsx  money_input.tsx
frontend/src/lib/: toCurrency.ts
frontend/src/routes/: __root.tsx  index.tsx  meals.tsx
(+5 files in other folders)
