[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.137.2",
    "google-genai>=2.9.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
